gke/hello-web/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: hello-web
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "hello-web-backend-config"}'
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  type: NodePort
