gke/hello-web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: hello-web
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "hello-web-static-ip"
    networking.gke.io/managed-certificates: "hello-web-iap"
    kubernetes.io/ingress.allow-http: "false"
spec:
  backend:
    serviceName: web
    servicePort: 8080
